--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,14 @@ body {
 
 /* Book Search Page */
 
-.header{
+.header {
   width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
   padding: 25px;
 }
+
 .book-search {
   width: 60%;
   margin: 20px;
@@ -36,7 +37,7 @@ body {
   margin-bottom: 20px;
   background-color: #fff;
   border-radius: 8px;
-  width: 20%;
+  width: 15%;
   transition: box-shadow 0.3s ease-in-out;
 }
 
@@ -63,7 +64,7 @@ body {
   background-color: #007bff;
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 10px;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
@@ -73,12 +74,12 @@ body {
   background-color: #0056b3;
 }
 
-.book-results{
+.book-results {
   display: flex;
   flex-wrap: wrap;
   gap: 18px;
   margin: 25px;
-  
+
 }
 
 /* Bookshelf Page */
@@ -91,10 +92,10 @@ body {
 .bookshelf h2 {
   font-size: 32px;
   color: #333;
-  margin: 30px 0 ;
+  margin: 30px 0;
 }
 
-.book-container{
+.book-container {
   padding: 25px;
   display: flex;
 }
@@ -112,7 +113,6 @@ body {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -121,15 +121,44 @@ body {
 }
 
 /* Responsive Design */
-@media (max-width: 600px) {
+@media (max-width: 740px) {
+  .header {
+    padding: 5px;
+    flex-direction: column;
+    align-items: center;
+  }
 
-  .book-search,
-  .bookshelf {
+  .book-search {
+    width: 90%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .header button {
+    width: 100px;
+  }
+
+  .book-search {
     margin: 20px;
     padding: 15px;
   }
 
+  .book-container {
+    padding: 5px;
+  }
+
+  .book-results {
+    margin: 5px;
+    gap: 5px;
+    padding: 10px;
+
+  }
+
   .book-card {
+    width: 100px;
     padding: 15px;
   }
+
 }
